# totalrepo

./: MASTERLIST.txt  New Text Document.txt  Setup.txt  altcode1.py  altcode2.py  altcode3.py  altcode4.py  altcode5.py  altcode5.spec  altcode6.py  bs5.py  buttonlabel.py  check1.py  code10.py  code11.py  code13.py  code14.py  code7.py  code7.spec  code7mod.py  code8.py  code8mod.py  code9.py  examples_of_formatting_excel.py  folder4.py  folder5.py  folder6.py  folder6.spec  folder7.py  folder7.spec  google_scrape.py  import.txt  main.py  matters.db  patent_data.xlsx  patent_data_US6123452_20250904_170905.xlsx  patent_data_US6123456_20250904_164237.xlsx  patent_data_US6123456_20250904_165044.xlsx  patent_data_US6123456_20250904_201213.xlsx  patent_export_20250826_205145.xlsx  (+42 more)
code9/: altcode6.py  altcode6.spec
env1/: pyvenv.cfg
env1/Scripts/: activate  activate.bat  activate.fish
